// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateSwift > generates correct Swift for a simple intent 1`] = `
"// SendMessageIntent.swift
// Axint compiler output. Edit freely; regenerate from the source definition when useful.

import AppIntents
import Foundation

struct SendMessageIntent: AppIntent {
    static var title: LocalizedStringResource = "Send Message"
    static var description: IntentDescription = IntentDescription("Sends a message to a contact")

    @Parameter(title: "Recipient", description: "Who to send the message to")
    var recipient: String

    @Parameter(title: "Body", description: "The message content")
    var body: String


    func perform() async throws -> some IntentResult & ReturnsValue<String> {
        // TODO: Implement your intent logic here.
        // Parameters available: recipient, body
        return .result(value: "")
    }
}
"
`;

exports[`generateSwift > generates correct Swift for an intent with no parameters 1`] = `
"// GetStatusIntent.swift
// Axint compiler output. Edit freely; regenerate from the source definition when useful.

import AppIntents
import Foundation

struct GetStatusIntent: AppIntent {
    static var title: LocalizedStringResource = "Get Status"
    static var description: IntentDescription = IntentDescription("Gets current status")

    func perform() async throws -> some IntentResult & ReturnsValue<String> {
        // TODO: Implement your intent logic here.
        return .result(value: "")
    }
}
"
`;

exports[`generateSwift > generates correct Swift for optional and default params 1`] = `
"// CreateReminderIntent.swift
// Axint compiler output. Edit freely; regenerate from the source definition when useful.

import AppIntents
import Foundation

struct CreateReminderIntent: AppIntent {
    static var title: LocalizedStringResource = "Create Reminder"
    static var description: IntentDescription = IntentDescription("Creates a reminder")

    @Parameter(title: "Title", description: "Reminder title")
    var intentTitle: String

    @Parameter(title: "Notes", description: "Optional notes")
    var notes: String?

    @Parameter(title: "Priority", description: "Priority level")
    var priority: Int = 1


    func perform() async throws -> some IntentResult & ReturnsValue<String> {
        // TODO: Implement your intent logic here.
        // Parameters available: intentTitle, notes, priority
        return .result(value: "")
    }
}
"
`;
